kubernetes_fundamentals/22_ingress/red.yaml
apiVersion: v1
kind: Pod
metadata:
  name: red
  labels:
    app: red
spec:
  containers:
    - name: nginx
      image: nginx:1.19.2
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
  volumes:
    - name: html
      configMap:
        name: red
        items:
          - key: body
            path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: red
spec:
  selector:
    app: red
  ports:
    - port: 80
