kubernetes_fundamentals/22_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /red
            pathType: Exact
            backend:
              service:
                name: red
                port: 
                  number: 80
          - path: /blue
            pathType: Exact
            backend:
              service:
                name: blue
                port:
                  number: 80
